Fixed pic on Safari

--- a/index_v3.css
+++ b/index_v3.css
@@ -2,9 +2,7 @@
 /* UTILITY*/
 :root {
     --paint-pink: #b83dba;
-    /* --paint-pink: rgb(237, 136, 215); */
     font-family: "DM Serif Display";
-    --meas: calc(100vh / 1px);
 }
 .hidden {
     display: none;
@@ -28,16 +26,23 @@ body {
     background-color: lightgray;
     background-repeat: no-repeat;
     background-position: 15% 0%;
+    background-attachment: fixed;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size:cover;
+    background-size: cover;
 }
 @media only screen and (max-width: 1000px) {
     body {
-        background-image: image-set("assets\\grey5.jpg");
+        background: url("assets/grey5.webp");
         background-size: 100%;
+        background-repeat: no-repeat;
+        background-color: lightgray;
     }
 }
 @media only screen and (min-width: 1000px) {
     body {
-        background-image: image-set("assets\\grey6.jpg");
+        background: url("assets/grey6.webp");
         background-size: cover;
     }
 }
